# Pubmed-fetcher

./: README.md  pyproject.toml  results.csv
pubmed_fetcher/: api.py  cli.py  parser.py
tests/: test_api.py  test_parser.py
