[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "A Python tool to fetch research papers from PubMed"
authors = ["Subas <subashreddykv2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pandas = "^1.5.3"
python-dotenv = "^0.21.0"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
